--- a/IV.html
+++ b/IV.html
@@ -9,21 +9,44 @@
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>IV Терапия в Наркологической клинике Trezvostin</title>
+    <meta name="description" content="Узнайте о IV терапии в Наркологической клинике Trezvostin. Капельницы антистресс, детокс, энергия, для похудения, и для печени. Выберите подходящий эффект и заказывайте сейчас.">
+    <meta name="keywords" content="IV терапия, капельница, антистресс, детокс, энергия, похудение, печень, Trezvostin">
+    <meta property="og:title" content="IV Терапия в Наркологической клинике Trezvostin">
+    <meta property="og:description" content="Узнайте о IV терапии в Наркологической клинике Trezvostin. Капельницы антистресс, детокс, энергия, для похудения, и для печени. Выберите подходящий эффект и заказывайте сейчас.">
+    <meta property="og:image" content="ссылка_на_изображение_логотипа_или_главной_страницы">
+    <meta property="og:url" content="ссылка_на_страницу_IV_терапии">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="ru_RU">
   </head>
   <body>
-    <header>
-      <div class="header__wrapper">
-        <a href="./index.html" class="logo">Trezvostin</a>
+  <header>
+    <div class="header__wrapper">
+      <a href="./index.html" class="logo">Trezvostin</a>
+      <ul>
+        <li><a href="./index.html#about">О нас</a></li>
+        <li><a href="./price.html">Цены</a></li>
+        <li><a href=" ./IV.html">IV-терапия</a></li>
+        <li><a href="./index.html#footer">Контакты</a></li>
+      </ul>
+      <a class="phone-link" href="tel:+79209374763">+79209374763</a>
+      <button class="button-popup" id="button">
+        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="27" viewBox="0 0 38 27" fill="none">
+          <path d="M6 5.5H32" stroke="black" stroke-width="2"/>
+          <path d="M6 13.5H32" stroke="black" stroke-width="2"/>
+          <path d="M6 21.5H32" stroke="black" stroke-width="2"/>
+        </svg>
+      </button>
+      <div id="popup">
         <ul>
           <li><a href="./index.html#about">О нас</a></li>
           <li><a href="./price.html">Цены</a></li>
           <li><a href=" ./IV.html">IV-терапия</a></li>
           <li><a href="./index.html#footer">Контакты</a></li>
         </ul>
-        <a href="tel:+79209374763">+79209374763</a>
       </div>
-    </header>
+    </div>
+  </header>
     <section class="wrapperPage">
       <h1>IV-терапия</h1>
       <aside class="cards">
@@ -850,12 +873,326 @@
             </div>
           </div>
         </section>
+        <section class="tabs">
+          <div class="tabsWrapperWidth">
+            <p class="titleTabs">Капельница для иммунитета «Imunno»</p>
+            <div class="tabsheader">
+              <div class="tab active" onclick="opentab('17', 7)">Стандарт</div>
+              <div class="tab" onclick="opentab('27', 7)">Стандарт+</div>
+              <div class="tab" onclick="opentab('37', 7)">Максимальная</div>
+            </div>
+            <div class="tabscontent">
+              <div class="content active" id="17">
+                <div class="flexWrapper">
+                  <div class="flexItem">
+                    <img src="./assets/dropper-min.png" alt="" />
+                  </div>
+                  <div class="flexItem">
+                    <h2 class="title">Капельница для иммунитета «Imunno»</h2>
+                    <p class="cost"><span>Цена:</span> 5000 руб.</p>
+                    <a href="index.html#call" class="itemButton">Заказать</a>
+                  </div>
+                </div>
+                <div class="effects">
+                  <p class="effectsTitle">ЭФФЕКТЫ:</p>
+                  <span class="effSubTitle"
+                  >Нажмите на эффект, чтобы узнать его состав</span
+                  >
+                  <div class="flexEffects">
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Витамины оказывают благоприятное воздействие при воспалительных и дегенеративных заболеваниях нервной системы и внутренних органов                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Обладает прямым противовирусным действием, повышает неспецифическую резистентность организма в отношении вирусных и бактериальных инфекций
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="content" id="27">
+                <div class="flexWrapper">
+                  <div class="flexItem">
+                    <img src="./assets/dropper-min.png" alt="" />
+                  </div>
+                  <div class="flexItem">
+                    <h2 class="title">Капельница для иммунитета «Imunno»
+                    </h2>
+                    <p class="cost"><span>Цена:</span> 8000 руб.</p>
+                    <a href="index.html#call" class="itemButton">Заказать</a>
+                  </div>
+                </div>
+                <div class="effects">
+                  <p class="effectsTitle">ЭФФЕКТЫ:</p>
+                  <span class="effSubTitle"
+                  >Нажмите на эффект, чтобы узнать его состав</span
+                  >
+                  <div class="flexEffects">
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Витамины оказывают благоприятное воздействие при воспалительных и дегенеративных заболеваниях нервной системы и внутренних органов
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Обладает прямым противовирусным действием, повышает неспецифическую резистентность организма в отношении вирусных и бактериальных инфекций
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Оказывает антигипоксическое, мембранопротекторное, ноотропное, противосудорожное и анксиолитическое действие, повышает устойчивость организма к стрессу
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="content" id="37">
+                <div class="flexWrapper">
+                  <div class="flexItem">
+                    <img src="./assets/dropper-min.png" alt="" />
+                  </div>
+                  <div class="flexItem">
+                    <h2 class="title">Капельница для иммунитета «Imunno»
+                    </h2>
+                    <p class="cost"><span>Цена:</span> 13000 руб.</p>
+                    <a href="index.html#call" class="itemButton">Заказать</a>
+                  </div>
+                </div>
+                <div class="effects">
+                  <p class="effectsTitle">ЭФФЕКТЫ:</p>
+                  <span class="effSubTitle"
+                  >Нажмите на эффект, чтобы узнать его состав</span
+                  >
+                  <div class="flexEffects">
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Витамины оказывают благоприятное воздействие при воспалительных и дегенеративных заболеваниях нервной системы и внутренних органов
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Обладает прямым противовирусным действием, повышает неспецифическую резистентность организма в отношении вирусных и бактериальных инфекций
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Оказывает антигипоксическое, мембранопротекторное, ноотропное, противосудорожное и анксиолитическое действие, повышает устойчивость организма к стрессу
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Регулирует метаболические процессы, устраняет дисбаланс электролитов, улучшает кровоснабжение сердечной мышцы, снижает возбудимость, восстанавливает проводимость нервно-мышечных тканей
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="tabs">
+          <div class="tabsWrapperWidth">
+            <p class="titleTabs">Капельница коктейль майерса</p>
+            <div class="tabsheader">
+              <div class="tab active" onclick="opentab('16', 6)">Стандарт</div>
+            </div>
+            <div class="tabscontent">
+              <div class="content active" id="16">
+                <div class="flexWrapper">
+                  <div class="flexItem">
+                    <img src="./assets/dropper-min.png" alt="" />
+                  </div>
+                  <div class="flexItem">
+                    <h2 class="title">Капельница «Коктейль Майерса»</h2>
+                    <p class="cost"><span>Цена:</span> 7000 руб.</p>
+                    <a href="index.html#call" class="itemButton">Заказать</a>
+                  </div>
+                </div>
+                <div class="effects">
+                  <p class="effectsTitle">ЭФФЕКТЫ:</p>
+                  <span class="effSubTitle"
+                  >Нажмите на эффект, чтобы узнать его состав</span
+                  >
+                  <div class="flexEffects">
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Витамины оказывают благоприятное воздействие при воспалительных и дегенеративных заболеваниях нервной системы и внутренних органов
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Снижение холестерина, улучшение работы сосудов
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Играет важную роль в формировании и укреплении костей, является эффективным средством для борьбы с болезнетворными бактериями, может улучшить состояние кожи, сохранить ее эластичность и здоровый вид
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Это важный минерал, который участвует в многих важных процессах в организме, включая работу сердца, здоровье костей, образование энергии и регуляцию уровня сахара в крови                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Является важным компонентом витаминного комплекса, который необходим для обмена веществ, процессах роста и развития, а также для поддержания здоровья нервной системы
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Является ключевым питательным веществом, необходимым для поддержания здоровья и процессов метаболизма человеческого организма
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+        <section class="tabs">
+          <div class="tabsWrapperWidth">
+            <p class="titleTabs">Капельница для сердца «Cardio»</p>
+            <div class="tabsheader">
+              <div class="tab active" onclick="opentab('18', 8)">Стандарт</div>
+              <div class="tab" onclick="opentab('28', 8)">Стандарт+</div>
+              <div class="tab" onclick="opentab('38', 8)">Максимальная</div>
+            </div>
+            <div class="tabscontent">
+              <div class="content active" id="18">
+                <div class="flexWrapper">
+                  <div class="flexItem">
+                    <img src="./assets/dropper-min.png" alt="" />
+                  </div>
+                  <div class="flexItem">
+                    <h2 class="title">Капельница для сердца «Cardio»</h2>
+                    <p class="cost"><span>Цена:</span> 5000 руб.</p>
+                    <a href="index.html#call" class="itemButton">Заказать</a>
+                  </div>
+                </div>
+                <div class="effects">
+                  <p class="effectsTitle">ЭФФЕКТЫ:</p>
+                  <span class="effSubTitle"
+                  >Нажмите на эффект, чтобы узнать его состав</span
+                  >
+                  <div class="flexEffects">
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Регулирует метаболические процессы, устраняет дисбаланс электролитов, улучшает кровоснабжение сердечной мышцы, снижает возбудимость, восстанавливает проводимость нервно-мышечных тканей                 </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="content" id="28">
+                <div class="flexWrapper">
+                  <div class="flexItem">
+                    <img src="./assets/dropper-min.png" alt="" />
+                  </div>
+                  <div class="flexItem">
+                    <h2 class="title">Капельница для сердца «Cardio»
+                    </h2>
+                    <p class="cost"><span>Цена:</span> 8000 руб.</p>
+                    <a href="index.html#call" class="itemButton">Заказать</a>
+                  </div>
+                </div>
+                <div class="effects">
+                  <p class="effectsTitle">ЭФФЕКТЫ:</p>
+                  <span class="effSubTitle"
+                  >Нажмите на эффект, чтобы узнать его состав</span
+                  >
+                  <div class="flexEffects">
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Регулирует метаболические процессы, устраняет дисбаланс электролитов, улучшает кровоснабжение сердечной мышцы, снижает возбудимость, восстанавливает проводимость нервно-мышечных тканей
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Витамины оказывают благоприятное воздействие при воспалительных и дегенеративных заболеваниях нервной системы и внутренних органов
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Повышает работоспособность, уменьшает симптомы психического и физического перенапряжения, способствует повышению выносливости
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="content" id="38">
+                <div class="flexWrapper">
+                  <div class="flexItem">
+                    <img src="./assets/dropper-min.png" alt="" />
+                  </div>
+                  <div class="flexItem">
+                    <h2 class="title">Капельница для сердца «Cardio»
+                    </h2>
+                    <p class="cost"><span>Цена:</span> 13000 руб.</p>
+                    <a href="index.html#call" class="itemButton">Заказать</a>
+                  </div>
+                </div>
+                <div class="effects">
+                  <p class="effectsTitle">ЭФФЕКТЫ:</p>
+                  <span class="effSubTitle"
+                  >Нажмите на эффект, чтобы узнать его состав</span
+                  >
+                  <div class="flexEffects">
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Регулирует метаболические процессы, устраняет дисбаланс электролитов, улучшает кровоснабжение сердечной мышцы, снижает возбудимость, восстанавливает проводимость нервно-мышечных тканей
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Витамины оказывают благоприятное воздействие при воспалительных и дегенеративных заболеваниях нервной системы и внутренних органов
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Повышает работоспособность, уменьшает симптомы психического и физического перенапряжения, способствует повышению выносливости
+                      </p>
+                    </div>
+                    <div class="effectItem">
+                      <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                      <p>
+                        Активируется метаболическая энергокоррекция, антигипоксическая и антиоксидантная активность в структурах головного мозга
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </aside>
     </section>
 
     <footer class="footer" id="footer">
       <div class="bottom-footer">
-        <a href="" class="logo">Trezvostin</a>
+        <a href="./index.html" class="logo">Trezvostin</a>
         <p>Гарантируем 100% результат при соблюдении всех рекомендаций врача</p>
       </div>
       <div class="head-footer">
